<resources>
    <string name="app_name">YF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_button">Countries</string>
    <string name="main_map">Map</string>
    <string name="filter">Filter</string>
    <string name="start_fragment">Countries and News</string>
    <string name="menu_item1">Показать список стран</string>
    <string name="menu_item2">Показать все страны</string>
    <string name="menu_item3">item 3</string>
    <string name="menu_item4">item 4</string>
    <string name="sort_population">Sort by population</string>
    <string name="wi_fi">wi-fi</string>
    <string name="sort_down">Сортировка по убыванию</string>
    <string name="reset_sort">Сбросить сортировку</string>
    <string name="error_default">Unknown error</string>
    <string name="search">Поиск</string>
    <string name="sort_up">Sort up</string>
    <string name="distance">Distance to country</string>
    <string name="country_description_text">Lorem Ipsum is simply dummy text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since
        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
        release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_of_capital">Capital:\u0020</string>
    <string name="text_of_languages">Languages:\u0020</string>
    <string name="text_of_area">Area:\u0020</string>
    <string name="dialog_ok">ОК</string>
    <string name="distanceToYou">Distance from you is %1$s km </string>
    <string name="sort">Sort</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chek_inet">Check internet connection, please</string>
    <string name="marker_title">Check internet connection, please</string>
    <string name="area">Area from %1$d to %2$d sq. km.</string>
    <string name="population">Population from %1$d to %2$d people.</string>
    <string name="Distance">Distance from you to the country</string>
    <string name="filter_name">Filter</string>
    <string name="def_value_edit_text">0</string>
    <string name="farthest_point">20038</string>
    <string name="capitals">Capitals</string>
    <string name="default_likes">125</string>
    <string name="news">News RU</string>
    <string name="noLocalNews">NO NEWS BY THIS LOCATION</string>
    <string name="turn_on_gps">Turn on GPS, please!</string>
    <string name="news_header">News:</string>
    <string name="NoNews">No news by this country.</string>
    <string name="foreground_channel_name">channel_name</string>
    <string name="foreground_channel_id">436643</string>
    <string name="explain_why_access_is_needed">Come on! We need location permission! Give it manual</string>
    <string name="foreground_notification_name">Countries  App</string>
    <string name="local_news">Local news</string>
    <string name="error_empty_data">Empty data</string>
    <string name="error_server_error">Server error</string>
    <string name="error_exception">Error loading data</string>
    <string name="service_notification_text">Tracking gps location</string>
    <string name="languages_title">Languages</string>

    <string-array name="rangeSliderValues">
        <item>1000</item>
        <item>5000</item>
    </string-array>

</resources>