<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search_button"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"/>
    <item android:id="@+id/online"
        android:icon="@drawable/ic_baseline_signal_wifi_off_24"
        app:showAsAction="ifRoom"
        android:title="@string/wi_fi"/>
    <item android:id="@+id/filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        app:showAsAction="always"
        android:title="@string/filter"/>
    <item android:id="@+id/reset_sort"
        android:icon="@drawable/ic_baseline_cancel_24"
        app:showAsAction="ifRoom"
        android:title="@string/reset_sort"/>
    <item android:id="@+id/sort_countries"
        android:icon="@drawable/ic_baseline_keyboard_arrow_up_24"
        app:showAsAction="always"
        android:title="@string/sort_population"/>
</menu>