<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_marginStart="@dimen/margin_17dp"
    android:layout_marginEnd="@dimen/margin_17dp"
    android:layout_marginBottom="@dimen/margin_10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/radius_recycler_card"
    app:contentPadding="@dimen/margin_10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:padding="@dimen/margin_10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_heading"
            android:textFontWeight="700"
            android:gravity="top"
            android:textSize="@dimen/font_size_24sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_of_capital"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/text_of_capital"
            android:textFontWeight="500"
            android:textSize="@dimen/font_size_16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/margin_start_heading"
            android:layout_marginTop="@dimen/margin_14dp"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_detail"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_19dp"
            android:layout_marginTop="@dimen/margin_14dp"
            android:textFontWeight="400"
            android:textSize="@dimen/font_size_16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            app:layout_constraintStart_toEndOf="@id/text_of_capital"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_of_languages"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_19dp"
            android:text="@string/text_of_languages"
            android:textFontWeight="500"
            android:textSize="@dimen/font_size_16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/margin_start_heading"
            android:layout_marginTop="@dimen/margin_top_shot_descr_recycler"
            app:layout_constraintTop_toBottomOf="@id/item_detail"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_lang"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_19dp"
            android:textFontWeight="400"
            android:textSize="@dimen/font_size_16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/margin_top_shot_descr_recycler"
            app:layout_constraintTop_toBottomOf="@+id/item_detail"
            app:layout_constraintStart_toEndOf="@id/text_of_languages"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_of_area"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_19dp"
            android:text="@string/text_of_area"
            android:textFontWeight="500"
            android:textSize="@dimen/font_size_16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/margin_start_heading"
            android:layout_marginTop="@dimen/margin_top_shot_descr_recycler"
            app:layout_constraintTop_toBottomOf="@id/text_of_languages"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_area"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_19dp"
            android:layout_marginTop="@dimen/margin_top_shot_descr_recycler"
            android:textFontWeight="400"
            android:textSize="@dimen/font_size_16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/item_lang"
            app:layout_constraintStart_toEndOf="@id/text_of_area"/>
        <com.example.course_android.customViews.CustomLikeBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_25dp"
            app:layout_constraintTop_toBottomOf="@id/item_area"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>